demo: fix Select Sample sample name cut off vertically

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -385,6 +385,7 @@ select {
   }
   #selectSample{
     width: 100% !important;
+    min-height: 3em;
     margin-top: 0px;
     margin-bottom: 0;
     min-width: 70%;
